🎉 RESTORE: Palauta kaikki sivut ja alkuperäinen next.config.js
- Palauta dashboard, demo, en, fi, pricing, signup, robots.ts, sitemap.ts
- Palauta täysi next.config.js konfiguraatio (i18n, redirects, optimizations)
- BUILD_UTILS_SPAWN_1 ongelma ratkaistu TypeScript types lisäämisellä
- Kaikki toiminnallisuudet nyt käytettävissä

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "cd frontend && npm run build",
-    "dev": "cd frontend && npm run dev", 
+    "dev": "cd frontend && npm run dev",
     "start": "cd frontend && npm run start",
     "lint": "cd frontend && npm run lint"
   },
@@ -17,5 +17,11 @@
     "frontend",
     "backend",
     "apps/*"
-  ]
+  ],
+  "devDependencies": {
+    "@types/node": "^24.10.1",
+    "@types/react": "^19.2.4",
+    "@types/react-dom": "^19.2.3",
+    "typescript": "^5.9.3"
+  }
 }
