--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.4",
     "@types/react-dom": "^19.2.3",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.2.5",
     "typescript": "^5.9.3"
   }
 }
