--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,12 +6,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "type-check": "tsc --noEmit",
+    "test": "vitest run"
   },
   "dependencies": {
+    "@notionhq/client": "^2.2.15",
+    "@sentry/nextjs": "^8.55.0",
     "@supabase/supabase-js": "^2.45.4",
     "lucide-react": "^0.469.0",
     "next": "^14.2.15",
+    "prom-client": "^15.1.3",
+    "resend": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "zod": "^3.23.8"
@@ -21,11 +27,13 @@
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.4",
     "@types/react-dom": "^19.2.3",
+    "@vitest/coverage-v8": "^1.6.1",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9",
+    "eslint": "^8.57.1",
     "eslint-config-next": "15.1.3",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vitest": "^1.6.1"
   }
 }
