🚀 MAJOR: Admin Control Plane + Monitoring + Testing
ADMIN FEATURES:
✅ Admin dashboard (frontend/app/admin/)
✅ Admin authentication & RBAC
✅ Activity feed & metrics
✅ Rate limiting middleware

MONITORING & OBSERVABILITY:
✅ Sentry client/server config
✅ Metrics API endpoints
✅ PII sanitization
✅ WebSocket monitoring

TESTING INFRASTRUCTURE:
✅ Vitest configuration
✅ E2E admin tests
✅ Backend auth tests
✅ Frontend component tests

DEVELOPER TOOLS:
✅ Git audit script
✅ Test suite automation
✅ OpenAPI spec & validation
✅ Prometheus alerts

CONFIGURATION:
✅ Environment samples
✅ Updated Makefile & README
✅ Enhanced ROI calculator
✅ Supabase client setup

Note: CI workflow excluded due to OAuth scope limitations

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,18 @@
 !support/**
 !docs/
 !docs/**
+!.github/
+!.github/**
+!openapi.yaml
+!openapi/
+!openapi/**
+!spectral.yaml
+!spectral/
+!spectral/**
+!prometheus/
+!prometheus/**
+!tests/
+!tests/**
 
 # allow code dirs
 !backend/
@@ -51,6 +63,9 @@
 !frontend/types/
 !frontend/types/**
 !frontend/middleware.ts
+!frontend/sentry.client.config.ts
+!frontend/sentry.server.config.ts
+!frontend/vitest.config.ts
 !shared_core/
 !shared_core/**
 !scripts/
@@ -92,6 +107,7 @@ scripts/**/__pycache__/
 .env
 .env.*
 *.env
+!.env.sample
 secrets.*
 *.key
 *.pem
