--- a/env.modular.example
+++ b/env.modular.example
@@ -17,6 +17,8 @@ RESEND_API_KEY=re_NEW_KEY_HERE
 SUPABASE_URL=https://your-project.supabase.co
 SUPABASE_SERVICE_ROLE_KEY=NEW_SERVICE_ROLE_KEY_HERE
 SUPABASE_ANON_KEY=NEW_ANON_KEY_HERE
+SUPABASE_JWT_ISS=https://your-project.supabase.co/auth/v1
+SUPABASE_JWT_AUD=authenticated
 
 # ===========================================
 # MONITORING & ANALYTICS
@@ -62,6 +64,11 @@ NEXT_PUBLIC_DASHBOARD_URL=http://localhost:3001
 # Backend API
 BACKEND_URL=http://localhost:8000
 NEXT_PUBLIC_API_URL=http://localhost:8000
+NEXT_PUBLIC_BACKEND_URL=http://localhost:8000
+NEXT_PUBLIC_BACKEND_WS_URL=ws://localhost:8000
+
+# Admin activity bus
+ADMIN_BUS_TYPE=memory
 
 # Dev Panel
 DEV_PANEL_URL=http://localhost:3002
