--- a/env.production.example
+++ b/env.production.example
@@ -24,6 +24,18 @@ EMAIL_SALES="sales@docflow.fi"
 # Supabase
 SUPABASE_URL=
 SUPABASE_SERVICE_ROLE=
+SUPABASE_JWT_ISS=
+SUPABASE_JWT_AUD=authenticated
+
+# Admin activity bus
+ADMIN_BUS_TYPE=memory  # memory | redis | supabase
+REDIS_URL=
+
+# Frontend admin control plane
+NEXT_PUBLIC_SUPABASE_URL=
+NEXT_PUBLIC_SUPABASE_ANON_KEY=
+NEXT_PUBLIC_BACKEND_URL=
+NEXT_PUBLIC_BACKEND_WS_URL=
 
 # Sentry
 SENTRY_DSN=
