--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "build": "cd frontend && npm run build",
     "dev": "cd frontend && npm run dev",
     "start": "cd frontend && npm run start",
-    "lint": "cd frontend && npm run lint"
+    "lint": "cd frontend && npm run lint",
+    "type-check": "cd frontend && npm run type-check",
+    "test": "cd frontend && npm run test",
+    "openapi:export": "ts-node --esm openapi/export.ts",
+    "openapi:lint": "spectral lint openapi.yaml",
+    "e2e:smoke": "cross-env E2E_BASE_URL=${E2E_BASE_URL:-http://localhost:3000} playwright test -g \"admin smoke\" --reporter=line"
   },
   "dependencies": {
     "next": "15.1.3",
@@ -19,11 +24,16 @@
     "apps/*"
   ],
   "devDependencies": {
+    "@playwright/test": "^1.56.1",
+    "@stoplight/spectral-cli": "^6.15.0",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.4",
     "@types/react-dom": "^19.2.3",
+    "cross-env": "^7.0.3",
     "eslint": "^8.57.1",
     "eslint-config-next": "^14.2.5",
-    "typescript": "^5.9.3"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3",
+    "yaml": "^2.8.1"
   }
 }
