--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,44 @@
 {
-  "version": 2,
   "buildCommand": "cd frontend && npm run build",
-  "devCommand": "cd frontend && npm run dev",
-  "installCommand": "npm install && cd frontend && npm install",
+  "outputDirectory": "frontend/.next",
   "framework": "nextjs",
   "regions": ["arn1"],
-  "functions": {
-    "frontend/app/api/**/*.ts": {
-      "memory": 1024,
-      "maxDuration": 30
-    }
+  "env": {
+    "NEXT_PUBLIC_SUPABASE_URL": "@supabase-url",
+    "NEXT_PUBLIC_SUPABASE_ANON_KEY": "@supabase-anon-key",
+    "SUPABASE_SERVICE_ROLE_KEY": "@supabase-service-role-key",
+    "OPENAI_API_KEY": "@openai-api-key",
+    "NEXT_PUBLIC_BACKEND_URL": "/api/v1",
+    "NEXT_PUBLIC_APP_URL": "https://veropilot.fi",
+    "NODE_ENV": "production"
   },
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "X-Content-Type-Options",
+          "value": "nosniff"
+        },
+        {
+          "key": "X-Frame-Options",
+          "value": "DENY"
+        },
+        {
+          "key": "X-XSS-Protection",
+          "value": "1; mode=block"
+        },
+        {
+          "key": "Referrer-Policy",
+          "value": "strict-origin-when-cross-origin"
+        }
+      ]
+    }
+  ],
   "rewrites": [
     {
       "source": "/api/v1/:path*",
-      "destination": "https://your-backend-url.onrender.com/api/v1/:path*"
+      "destination": "/api/:path*"
     }
   ]
 }
-
