--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,13 @@
     "@notionhq/client": "^2.2.15",
     "@sentry/nextjs": "^8.55.0",
     "@supabase/supabase-js": "^2.45.4",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.469.0",
     "next": "^14.2.15",
     "prom-client": "^15.1.3",
-    "resend": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "resend": "^3.2.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
