--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "docflow-monorepo",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "cd frontend && npm run build",
     "dev": "cd frontend && npm run dev",
@@ -14,6 +15,8 @@
     "e2e:smoke": "cross-env E2E_BASE_URL=${E2E_BASE_URL:-http://localhost:3000} playwright test -g \"admin smoke\" --reporter=line"
   },
   "dependencies": {
+    "@modelcontextprotocol/sdk": "^0.5.0",
+    "dotenv": "^17.2.3",
     "next": "15.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
