--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -28,6 +28,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.66.1",
+    "recharts": "^3.4.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "typescript": "^5.4.5",
