--- a/apps/dashboard/env.example
+++ b/apps/dashboard/env.example
@@ -8,11 +8,15 @@ NEXT_PUBLIC_ENV=development
 NEXT_PUBLIC_SENTRY_TRACES_SAMPLE_RATE=0.1
 
 # WebSocket URL for real-time notifications
-NEXT_PUBLIC_WS_URL=ws://localhost:8000/ws
+# Production: wss://docflow-admin-api.fly.dev/ws
+# Development: ws://localhost:8000/ws
+NEXT_PUBLIC_WS_URL=wss://docflow-admin-api.fly.dev/ws
 
 # Supabase Configuration
 NEXT_PUBLIC_SUPABASE_URL=your-supabase-url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key
 
 # API URL
-NEXT_PUBLIC_API_URL=http://localhost:8000
+# Production: https://docflow-admin-api.fly.dev
+# Development: http://localhost:8000
+NEXT_PUBLIC_API_URL=https://docflow-admin-api.fly.dev
