feat: Add OCR pipeline for receipt processing
- Add document upload endpoint (POST /api/documents/upload)
- Add OCR processing endpoint with GPT-4 Vision (POST /api/ocr/process)
- Add document status endpoint (GET /api/documents/[id])
- Add demo page with drag-and-drop upload (/test)
- Add OpenAI SDK dependency (^4.0.0)
- Add Supabase schema fixes (ocr_data, file_url columns)
- Add Storage RLS policies for documents bucket
- Add deployment and testing documentation
- Add environment variables setup guides
- Add test scripts and verification tools

All environment variables configured in Vercel.
Production URL: https://dashboard-bli5l1uwd-maxs-projects-149851b4.vercel.app

--- a/apps/dashboard/env.example
+++ b/apps/dashboard/env.example
@@ -22,3 +22,11 @@ SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
 # Production: https://docflow-admin-api.fly.dev
 # Development: http://localhost:8000
 NEXT_PUBLIC_API_URL=https://docflow-admin-api.fly.dev
+
+# OpenAI Configuration (for OCR processing)
+OPENAI_API_KEY=your-openai-api-key
+
+# App URL (for internal API calls)
+# Production: https://your-dashboard.vercel.app
+# Development: http://localhost:3001
+NEXT_PUBLIC_APP_URL=http://localhost:3001
