--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -31,6 +31,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.263.1",
     "next": "14.2.3",
+    "openai": "^4.0.0",
     "pg": "^8.16.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
