fix: Use project root as build context for Fly.io deployment

--- a/backend/fly.toml
+++ b/backend/fly.toml
@@ -1,7 +1,8 @@
 app = "docflow-admin-api"
 
 [build]
-  dockerfile = "Dockerfile"
+  dockerfile = "backend/Dockerfile"
+  docker_build_context = "."
 
 [env]
   PORT = "8080"
