--- a/fly.toml
+++ b/fly.toml
@@ -11,8 +11,8 @@ app = "docflow-admin-api"
   ADMIN_BUS_TYPE = "redis"
 
 [processes]
-  web = "uvicorn main:app --host 0.0.0.0 --port 8080"
-  app = "uvicorn main:app --host 0.0.0.0 --port 8080"
+  web = "uvicorn main_simple:app --host 0.0.0.0 --port 8080"
+  app = "uvicorn main_simple:app --host 0.0.0.0 --port 8080"
 
 [[services]]
   internal_port = 8080
