fix: Use psycopg2-binary instead of psycopg2 and add OpenAI env vars to fly.toml

--- a/fly.toml
+++ b/fly.toml
@@ -9,6 +9,8 @@ app = "docflow-admin-api"
   PYTHONPATH = "/app"
   PYTHONUNBUFFERED = "1"
   ADMIN_BUS_TYPE = "redis"
+  OPENAI_API_KEY = "dummy-key-for-deployment-test"
+  VISION_MODEL = "gpt-4o-mini"
 
 [processes]
   web = "uvicorn backend.main:app --host 0.0.0.0 --port 8080"
