--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@notionhq/client": "^2.2.15",
     "@radix-ui/react-slot": "^1.2.3",
     "@sentry/nextjs": "^8.55.0",
+    "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.45.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
