feat: Production-ready DocFlow.fi with billing page and beta signup integration
- Added comprehensive billing page with subscription management
- Integrated beta signup with docflow-admin-api.fly.dev backend
- Fixed .gitignore to allow components/ tracking
- All 8/8 UI/UX tasks completed and ready for production
- Beta signup flow tested and working with live backend API

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,8 @@
 !frontend/
 !frontend/app/
 !frontend/app/**
+!frontend/components/
+!frontend/components/**
 !frontend/lib/
 !frontend/lib/**
 !frontend/hooks/
