fix: PYTHONPATH korjaus + admin-auth käyttöön (kriittiset korjaukset)
- Korjattu PYTHONPATH Dockerfile:ssa ja fly.toml:ssa (/app:/app/backend)
- Otettu admin-auth middleware käyttöön backend/main.py:ssä
- Ratkaisee 502 Bad Gateway -ongelman
- Suojaa admin-reitit (turvallisuusriski korjattu)
- Dokumentoitu BACKEND_STATUS_SECURITY_REPORT.md ja CRITICAL_FIXES_APPLIED.md

--- a/fly.toml
+++ b/fly.toml
@@ -6,11 +6,12 @@ app = "docflow-admin-api"
 
 [env]
   PORT = "8080"
-  PYTHONPATH = "/app"
+  PYTHONPATH = "/app:/app/backend"
   PYTHONUNBUFFERED = "1"
   ADMIN_BUS_TYPE = "redis"
   OPENAI_API_KEY = "dummy-key-for-deployment-test"
   VISION_MODEL = "gpt-4o-mini"
+  # SENTRY_DSN disabled for deployment testing
 
 [processes]
   web = "uvicorn backend.main:app --host 0.0.0.0 --port 8080"
