--- a/fly.toml
+++ b/fly.toml
@@ -14,8 +14,8 @@ app = "docflow-admin-api"
   # SENTRY_DSN disabled for deployment testing
 
 [processes]
-  web = "cd /app && PYTHONPATH=/app:/app/backend uvicorn backend.main:app --host 0.0.0.0 --port 8080"
-  app = "cd /app && PYTHONPATH=/app:/app/backend uvicorn backend.main:app --host 0.0.0.0 --port 8080"
+   web = "sh -c 'cd /app && PYTHONPATH=/app:/app/backend uvicorn backend.main:app --host 0.0.0.0 --port 8080'"
+   app = "sh -c 'cd /app && PYTHONPATH=/app:/app/backend uvicorn backend.main:app --host 0.0.0.0 --port 8080'"
 
 [[services]]
   internal_port = 8080
