📝 ADD: PROJEKTI_PÄIVITYS_24_11_2024.md - Comprehensive project status update
- Complete project status as of 24.11.2024
- Admin Dashboard v2.1.0 features documented
- Phase 1 AI Features summary
- Deployment status (Vercel + Fly.io + Supabase)
- Observability setup (Sentry + Prometheus)
- Known issues and solutions
- Next steps and roadmap

Updated .gitignore to allow this document

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,9 @@
 !TEKNISET_OMINAISUUDET.md
 !DEVELOPER_ARCHITECTURE.md
 !AI_ORCHESTRATOR.md
+!PROJEKTI_PÄIVITYS_24_11_2024.md
+!DEPLOYMENT_GUIDE.md
+!TECHNICAL_OVERVIEW_FI.md
 !PRIORITIES_4-7_IMPLEMENTATION.md
 !vercel.json
 !package.json
